module/postponed/type_constructor/tests/inc/single/single_with_two_args_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!( single Bad : < T1, T2 > );
}
